--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -98,10 +98,9 @@ CalCur_unbal2_list <- list() #Creating an empty list to store vectors so can ind
 
   check.rpath.params(CalCur_unbal2_list[[i]])
   }
-CalCur_unbal2_list[[450]]
-
+CalCur_unbal2_list[[439]]
 ```
- 
+
 #Creating a balanced Ecopath model 
 ```{r}
 Cal_bal2 <- list()
@@ -112,6 +111,39 @@ Cal_bal2[[i]] <- rpath(CalCur_unbal2_list[[i]])
 }
 Cal_bal2[[430]]
 ```
+
+#Loop to calculate outliers
+```{r}
+#Do this with balanced instead! 
+#Look at balanced data frame 
+seven_models <- CalCur_unbal2_list[c(67, 126, 237, 343, 396, 430, 472)]
+rest_of_models <- CalCur_unbal2_list[-c(67, 126, 237, 343, 396, 430, 472)]
+
+for (i in 1:493) {
+rest_of_models[[i]] <- rest_of_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
+}
+
+table_Biomass <- bind_rows(rest_of_models) %>% group_by(Group) %>% summarize(IQR_biomass= IQR(Biomass), quantile_lower = quantile(Biomass, 0.25), quantile_upper = quantile(Biomass, 0.75)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
+
+table_1 <- seven_models[[1]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group == "mesopelagics") %>% group_by(Group) %>% summarize(biomass_7= mean(Biomass))
+
+table_Biomass %>% left_join(table_1) %>% mutate(outlier= ifelse(biomass_7 < lower_outlier|biomass_7 > upper_outlier, TRUE, FALSE))
+
+outlier <- list()
+for (i in 1:7) {
+seven_out <- seven_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
+outlier[i] <- seven_out %>% left_join(table_Biomass) %>% mutate(outlier= ifelse(Biomass < lower_outlier|Biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
+}
+outlier[1]
+table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(biomass_493 = mean(Biomass), sd= sd(Biomass))
+```
+
+```{r}
+
+```
+
+
+
 
 #Creating base scenario 
 ```{r}
