--- a/Scripts/OTZ.results.newRpath.Rmd
+++ b/Scripts/OTZ.results.newRpath.Rmd
@@ -15,6 +15,7 @@ library(ggplot2)
 library(Rpath)
 library(cowplot)
 library(grid)
+library(gridExtra)
 ```
 
 #Importing code
@@ -157,25 +158,17 @@ data_1 <- gather(z_1, key = spp, value = biomass, -month )
 #Plot functional group biomass over the 50-year simulation
 #Graph with commercially valuable predators
 plot1_comm <- data_1 %>% filter(spp %in% commercial_predators) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Relative biomass") +
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = expression(bold("Greenstriped rock.")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth flounder")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thorny.")), "Other cephal."= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rock.")), "Shortspine thorny."= expression(bold("Shortspine thorny.")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rock.")), "Splitnose rock."= expression(bold("Splitnose rock.")), "Widow rock."= expression(bold("Widow rock.")), "Yellowtail rock."= expression(bold("Yellowtail rock.")))) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = expression(bold("Greenstriped rockfish")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth flounder")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thornyhead")), "Other cephalopod"= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rockfish")), "Shortspine thorny."= expression(bold("Shortspine thornyhead")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rockfish")), "Splitnose rockfish"= expression(bold("Splitnose rockfish")), "Widow rock."= expression(bold("Widow rockfish")), "Yellowtail rock."= expression(bold("Yellowtail rockfish")))) + 
   theme_bw() + theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
-theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour= "Commercially valuable predators", title= "A") + theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/plot.commercial.50.jpeg")
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour= "Commercial predators", title= "A") + theme(legend.text.align= 0, legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/plot.commercial.50.jpeg")
 plot1_comm    
-
-#Removes legend: 
-theme(legend.position= "none"), #put in code above 
-#Seperates legend and saves it as pdf document 
-legend <- get_legend(plot1_comm)
-pdf("/Users/SallyDowd/Documents/legend.pdf")
-grid.draw(legend)
-dev.off()
 
 #Graph with noncommercially valuable predators
 new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15,14,13,3)] #Remove predators that have commercial value as well 
 plot1_noncomm <- data_1 %>% filter(spp %in% new_noncomm) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Relative biomass") + 
-scale_color_discrete(type = "viridis", labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juv. rock.")) + 
+scale_color_discrete(type = "viridis", labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juv. rockfish")) + 
   theme_bw() + theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
-theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour= "Nonommercially valuable predators", title= "B") + theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/plot.noncommercial.50.jpeg")
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour= "Non-commercial predators", title= "B") + theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/plot.noncommercial.50.jpeg")
 plot1_noncomm    
 
 #Graph for marine mammals
@@ -183,18 +176,30 @@ plot1_mammals <- data_1 %>% filter(spp %in% mammals) %>% ggplot(aes(x= month, y 
 theme_bw() + 
 scale_color_discrete(type = "viridis", labels= c("Adult N. Ele. Seal" = "Adult n. elephant seal", "Juv. Ele. Seal"= "Juv. elephant seal", "Resident Orcas"= "Resident orcas", "Sea Lions"= "Sea lions", "Transient Orcas"= "Transient orcas")) + 
 theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
-theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Marine mammals", title= "A") + theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12))
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Marine mammals", title= "A") + theme( legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12))
 ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/plot.mammals.50.jpeg")
 plot1_mammals
+
+#Seperates legend and saves it as pdf document 
+legend <- get_legend(plot1_mammals)
+pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/mammals.legend.pdf")
+grid.draw(legend)
+dev.off()
 
 #Graph for species with highest economic value, NEED to change species names?
 plot1_high.price <- data_1 %>% filter(spp %in% high.price) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Relative biomass") + 
 theme_bw() + 
-scale_color_discrete(type= "viridis") + 
+scale_color_discrete(type= "viridis", labels= c("Albacore", "Lingcod", "Sablefish", "Salmon", "Shelf rockfish", "Shortspine thornyhead")) + 
 theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
-theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Commercial predators", title= "B") + theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
-ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/plot.highprice.50.jpeg")
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + labs(colour = "Commercial predators", title= "B") + theme(legend.position= "none", legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) 
+#ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/plot.highprice.50.jpeg")
 plot1_high.price
+
+#Seperates legend and saves it as pdf document 
+legend <- get_legend(plot1_high.price)
+pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/price.legend.pdf", width= 6, height= 5)
+grid.draw(legend)
+dev.off()
 ```
 
 #Depletion level of 25%
@@ -261,15 +266,20 @@ change_2_1 <- change_2_1_df %>% mutate(value = round(as.numeric(paste(value)), 2
 #Change species labels? change text size 
 change_2_1_plot <- change_2_1 %>% ggplot(aes(col = result)) + geom_point(aes(x=value, y=reorder(species, desc(species)))) + 
 scale_colour_grey() + 
-scale_y_discrete(labels= c("Tufted Puffin= Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel")) + 
+scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
   geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
   xlim(0.75, 1.25) + 
-xlab("Relative biomass") + ylab("Predators with high diet proportion ") + labs(col = "End biomass", title= "A") + theme_bw() + theme(panel.border = element_blank()) +
+xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "End biomass", title= "A") + theme_bw() + theme(panel.border = element_blank()) +
 theme(axis.line = element_line(colour = "black")) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
-theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
+theme(legend.position= "none", legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
 ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/dietover.25.jpeg")
 change_2_1_plot 
+
+legend <- get_legend(change_2_1_plot)
+pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/diet.legend.pdf", width= 6, height= 5)
+grid.draw(legend)
+dev.off()
 
 #3.5: Diet under 0.05 
 
@@ -283,16 +293,16 @@ change_2_2 <- change_2_2_df %>% mutate(value = round(as.numeric(paste(value)), 2
 
 change_2_2_plot <- change_2_2 %>% ggplot(aes(col= result)) + geom_point(aes(x= value, y=reorder(species, desc(species)))) + 
 scale_colour_grey() +  
- scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele.      Seal"= "Juv. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant",    "Brandt's corm"= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder")) + 
+ scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant",    "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juvenile rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish")) + 
   xlim(0.75, 1.25) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
-xlab("Relative biomass") + ylab("Predators with low diet proportion") + 
+xlab("Relative biomass") + ylab("Species with low diet proportion") + 
 labs(col = "End biomass", title= "A") +
 theme_bw() +
 theme(panel.border = element_blank()) +
 theme(axis.line = element_line(colour = "black")) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
 #theme(legend.position= "none") #if don't want legend
-  theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
+  theme(legend.position= "none", legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
 ggsave(width = 7, height = 5, "~/Documents/OTZ.manuscript/Images/dietunder.25.jpeg")
 change_2_2_plot
 ```
