Editing outlier code

--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -103,31 +103,6 @@ CalCur_unbal2_list[[439]]
 
 #Calculating outliers
 
-##Biomass 
-```{r}
-seven_models <- CalCur_unbal2_list[c(67, 126, 237, 343, 396, 430, 472)]
-rest_of_models <- CalCur_unbal2_list[-c(67, 126, 237, 343, 396, 430, 472)]
-
-for (i in 1:493) {
-rest_of_models[[i]] <- rest_of_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
-}
-
-table_Biomass <- bind_rows(rest_of_models) %>% group_by(Group) %>% summarize(IQR_biomass= IQR(Biomass), quantile_lower = quantile(Biomass, 0.25), quantile_upper = quantile(Biomass, 0.75)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
-
-table_1 <- seven_models[[1]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group == "mesopelagics") %>% group_by(Group) %>% summarize(biomass_7= mean(Biomass))
-
-table_Biomass %>% left_join(table_1) %>% mutate(outlier= ifelse(biomass_7 < lower_outlier|biomass_7 > upper_outlier, TRUE, FALSE))
-
-outlier <- list()
-for (i in 1:7) {
-seven_out <- seven_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
-outlier[i] <- seven_out %>% left_join(table_Biomass) %>% mutate(outlier= ifelse(Biomass < lower_outlier|Biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
-}
-outlier[1]
-
-table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(biomass_493 = mean(Biomass), sd= sd(Biomass))
-```
-
 ##QB
 ```{r}
 seven_models <- CalCur_unbal2_list[c(67, 126, 237, 343, 396, 430, 472)]
@@ -268,6 +243,7 @@ z_6.2[[i]]$month <- 1:600
 data_6.2[[i]] <- gather(z_6.2[[i]], key = spp, value = biomass, -month)
 data_6.2[[i]] <- data_6.2[[i]] %>% filter(month==600) %>% mutate(X= i)
 }
+
 ```
 
 #Confidence intervals: Want 95% CI for each model at month 600 for each commercially and noncommercially valuable species
@@ -385,9 +361,55 @@ ggsave(width = 6, height = 4, "~/Documents/OTZ.Manuscript/Images/500.noncommerci
 noncomm_value_500
 ```
 
+##Biomass 
+```{r}
+seven_models <- CalCur_unbal2_list[c(67, 126, 237, 343, 396, 430, 472)]
+rest_of_models <- CalCur_unbal2_list[-c(67, 126, 237, 343, 396, 430, 472)]
 
+for (i in 1:493) {
+rest_of_models[[i]] <- rest_of_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
+}
 
+table_Biomass <- bind_rows(rest_of_models) %>% group_by(Group) %>% summarize(IQR_biomass= IQR(Biomass), quantile_lower = quantile(Biomass, 0.025), quantile_upper = quantile(Biomass, 0.95)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
 
+table_1 <- seven_models[[1]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group == "mesopelagics") %>% group_by(Group) %>% summarize(biomass_7= mean(Biomass))
+
+table_Biomass %>% left_join(table_1) %>% mutate(outlier= ifelse(biomass_7 < lower_outlier|biomass_7 > upper_outlier, TRUE, FALSE))
+
+outlier <- list()
+for (i in 1:7) {
+seven_out <- seven_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
+outlier[i] <- seven_out %>% left_join(table_Biomass) %>% mutate(outlier= ifelse(Biomass < lower_outlier|Biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
+}
+outlier[1]
+
+table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(biomass_493 = mean(Biomass), sd= sd(Biomass))
+```
+
+#Are the results outliers
+```{r}
+seven_models_outliers <- bind_rows(data_6.2) %>% filter(X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(spp)
+seven_models_outliers <- transform(seven_models_outliers,ID=as.numeric(factor(spp))) 
+seven_models_outliers <- seven_models_outliers %>% group_by(spp, ID) %>% summarise(mean_biomass = mean(biomass))
+
+#Need to calculate IQR of rest_of_model_outliers before we find mean_biomass
+rest_of_models_outliers <- sum_data_6 %>% summarize(IQR_biomass = IQR(Biomass)) %>% select(spp, mean_biomass, quant_2.5, quant_97.5, IQR_biomass)
+
+table_Biomass <- bind_rows(rest_of_models) %>% group_by(Group) %>% summarize(IQR_biomass= IQR(Biomass), quantile_lower = quantile(Biomass, 0.025), quantile_upper = quantile(Biomass, 0.975)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
+
+table_1 <- seven_models[[1]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group == "mesopelagics") %>% group_by(Group) %>% summarize(biomass_7= mean(Biomass))
+
+table_Biomass %>% left_join(table_1) %>% mutate(outlier= ifelse(biomass_7 < lower_outlier|biomass_7 > upper_outlier, TRUE, FALSE))
+
+outlier <- list()
+for (i in 1:7) {
+seven_out <- seven_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
+outlier[i] <- seven_out %>% left_join(table_Biomass) %>% mutate(outlier= ifelse(Biomass < lower_outlier|Biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
+}
+outlier[1]
+
+table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(biomass_493 = mean(Biomass), sd= sd(Biomass))
+```
 
 
 
