--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -419,56 +419,15 @@ table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(bio
 
 #Are the results outliers
 ```{r}
-df
-letters <- c("A", "B", "C", "D", "E", "F", "G")
-X <- c(67, 126, 237, 343, 396, 430, 472)
-letters <- letters %>% bind_cols(X) 
-seven_models_outliers <- bind_rows(data_6.2) %>% filter(X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(X)
-seven_models_outliers <- seven_models_outliers %>% mutate(ID.X = revalue(X, c(67="A", 126="B", 237= "C", 343= "D", 396= "E", 430= "F", 472= "G")))
-
-seven_models_outliers <- bind_rows(data_6.2) %>% filter(X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(X)
-seven_models_outliers <- transform(seven_models_outliers, ID.X=as.numeric(factor(X)))  
-seven_models_outliers <- seven_models_outliers %>% mutate(ID.X = revalue(c(67, 126, 237, 343, 396, 430, 472), c("A", "B", "C", "D", "E", "F", "G"))
-
-  X, c(67="A", 126="B", 237= "C", 343= "D", 396= "E", 430= "F", 472= "G")))
-  mutate(ID.X= as.character(X))
-
-
 rest_of_models_outliers <- entire_data_6 %>% group_by(spp) %>% summarize(IQR_biomass = IQR(biomass), quantile_lower = quantile(biomass, 0.25), quantile_upper = quantile(biomass, 0.75)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
 
-seven_models_outliers <- seven_models_outliers %>% spread(ID.X, biomass) 
+seven_models_outliers <- bind_rows(data_6.2) %>% filter(X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(X)
+seven_models_outliers <- transform(seven_models_outliers, ID.X=as.numeric(factor(X))) 
+seven_models_outliers <- seven_models_outliers %>% spread(ID.X, biomass) %>% rename("model1"= "1", "model2"= "2", "model3"= "3", "model4"= "4", "model5"= "5", "model6"= "6", "model7" = "7")
 
-test <- seven_models_outliers %>% left_join(rest_of_models_outliers) %>%
-  mutate(outlier1 = ifelse(1 < lower_outlier|1 > upper_outlier, TRUE, FALSE)) 
+#Each species final biomass in each of the 7 models are outliers 
+test <- seven_models_outliers %>% left_join(rest_of_models_outliers) %>% mutate(outlier1 = ifelse(model1 < lower_outlier|model1 > upper_outlier, TRUE, FALSE), outlier2 = ifelse(model2 < lower_outlier|model2 > upper_outlier, TRUE, FALSE), outlier3 = ifelse(model3 < lower_outlier|model3 > upper_outlier, TRUE, FALSE), outlier4 = ifelse(model4 < lower_outlier|model4 > upper_outlier, TRUE, FALSE), outlier5 = ifelse(model5 < lower_outlier|model5 > upper_outlier, TRUE, FALSE), outlier6 = ifelse(model6 < lower_outlier|model6 > upper_outlier, TRUE, FALSE), outlier7 = ifelse(model7 < lower_outlier|model7 > upper_outlier, TRUE, FALSE))
 
-
-
-%>% select(outlier)
-
-
-
-#This is what I'm struggling with
-outlier <- list()
-for (i in unique(seven_models_outliers$ID.X)){
-subdf <- subset(x=seven_models_outliers, subset=ID.X==i)
-outlier[i] <- subdf %>% group_by(Group) %>% left_join(rest_of_models_outliers) %>% mutate(outlier= ifelse(biomass < lower_outlier|biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
-}
-
-outlier[1]
-
-
-table_1 <- seven_models[[1]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group == "mesopelagics") %>% group_by(Group) %>% summarize(biomass_7= mean(Biomass))
-
-table_Biomass %>% left_join(table_1) %>% mutate(outlier= ifelse(biomass_7 < lower_outlier|biomass_7 > upper_outlier, TRUE, FALSE))
-
-outlier <- list()
-for (i in 1:7) {
-seven_out <- seven_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
-outlier[i] <- seven_out %>% left_join(table_Biomass) %>% mutate(outlier= ifelse(Biomass < lower_outlier|Biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
-}
-outlier[7]
-
-table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(biomass_493 = mean(Biomass), sd= sd(Biomass))
 ```
 
 
