--- a/Scripts/Uncertainty.ranges.Rmd
+++ b/Scripts/Uncertainty.ranges.Rmd
@@ -6,15 +6,16 @@ output: html_document
 ```{r}
 library(dplyr)
 library(ggplot2)
+library(readxl)
 ```
 
 ```{r}
-Uncertainty_ranges <- read_excel("~/Documents/Uncertainty.ranges.xlsx")
+Uncertainty_ranges <- read_excel("~/Documents/OTZ.manuscript/Excel/Uncertainty.ranges.xlsx")
 ```
 
 ```{r}
-Uncert_range <- Uncertainty_ranges %>% ggplot() +
-geom_linerange(aes(ymin= Min, ymax= Max, x= factor(Parameter, level= c('Mortality', 'Biomass', 'Fishing Costs', 'Price')))) + 
+Uncert_range <- Uncertainty_ranges %>% ggplot(aes(x= factor(Parameter, level= c('Mortality', 'Biomass', 'Fishing Costs', 'Price'))))  +
+  geom_errorbar(aes(ymin = Min, ymax = Max), width = 0.15) + 
 theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10, family= "Helvetica
 serif"), axis.title=element_text(size=12)) + 
 xlab("Parameter") + ylab("Critical value range") + 
